# HET-AGI-LarkBots

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  api_keys.json.example  app.py  docker-compose.yml  lark_api_keys.json.example  mcp_servers_config.json.example  pyproject.toml  tmp.json
.github/workflows/: docker-build.yml
scripts/: render_htmls_to_pdfs.py  start_github_inviter.py  start_robots.py  start_robots_251122_1000.py  start_robots_for_testing.py  test_models.py
scripts/process_problem_raw_files/: step_0_parse_raw_files.py  step_1_supplement_pictures.py  step_2_package_into_final_QAs.py  step_3_eval_models.py
scripts/start_robot_history/: start_robots_251122_1000.py
scripts/webhook/: deploy-het-lark-bot.sh  hooks.json
