[project]
name = "het-agi-larkbots"
version = "0.1.0"
description = "An intelligent Lark/Feishu bot framework with AI integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "lark-oapi>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "pywheels>=0.8.3",
    "requests>=2.31.0",
    "ruamel.yaml>=0.18.0",
    "supabase>=2.24.0",
    "uvloop>=0.19.0 ; sys_platform != 'win32'",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "sympy>=1.13.0",
    "pyarrow>=22.0.0",
    "pymupdf>=1.26.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["library"]

[tool.uv]
# 配置 PyPI 镜像为北大镜像源（加速下载）
index-url = "https://mirrors.pku.edu.cn/pypi/web/simple"

[tool.uv.sources]
# 可选：如果需要从本地路径或 git 仓库安装 pywheels，可以在这里配置
# 示例：
# pywheels = { git = "https://github.com/your-org/pywheels.git" }
# pywheels = { path = "../pywheels", editable = true }

